# spectre

./: .clang-format  .clang-tidy  .codecov.yaml  .dockerignore  .gitignore  .travis.yml  AbortWithErrorMessage_8hpp.html  AbortWithErrorMessage_8hpp_source.html  Abort_8hpp_source.html  AccessType_8hpp.html  AccessType_8hpp_source.html  ActionTesting_8hpp_source.html  Actions_2ComputeTimeDerivative_8hpp_source.html  ActiveGrid_8hpp_source.html  AdamsBashforthN_8hpp.html  AdamsBashforthN_8hpp_source.html  AddComputeTags_8hpp_source.html  AddSimpleTags_8hpp_source.html  AddSubtract_8hpp.html  AddSubtract_8hpp_source.html  AddTemporalIdsToInterpolationTarget_8hpp_source.html  AdvanceTime_8hpp.html  AdvanceTime_8hpp_source.html  Affine_8hpp.html  Affine_8hpp_source.html  AlfvenWave_8hpp_source.html  AlgorithmArrayDeclarations_8hpp_source.html  AlgorithmArray_8hpp.html  AlgorithmArray_8hpp_source.html  AlgorithmGroupDeclarations_8hpp_source.html  AlgorithmGroup_8hpp.html  AlgorithmGroup_8hpp_source.html  AlgorithmMetafunctions_8hpp_source.html  AlgorithmNodegroupDeclarations_8hpp_source.html  AlgorithmNodegroup_8hpp.html  AlgorithmNodegroup_8hpp_source.html  AlgorithmSingletonDeclarations_8hpp_source.html  AlgorithmSingleton_8hpp.html  AlgorithmSingleton_8hpp_source.html  AlignedLattice_8hpp_source.html  (+7502 more)
src/: CMakeLists.txt
src/ApparentHorizons/: CMakeLists.txt  ChangeCenterOfStrahlkorper.cpp  ChangeCenterOfStrahlkorper.hpp  ComputeExcisionBoundaryVolumeQuantities.hpp  ComputeExcisionBoundaryVolumeQuantities.tpp  ComputeHorizonVolumeQuantities.hpp  ComputeHorizonVolumeQuantities.tpp  ComputeItems.hpp  FastFlow.cpp  FastFlow.hpp  HorizonAliases.hpp  HorizonComponent.hpp  HorizonComponentActions.hpp  HorizonManagerComponent.hpp  HorizonManagerComponentActions.hpp  InterpolationTarget.cpp  InterpolationTarget.hpp  ObjectLabel.cpp  ObjectLabel.hpp  ObserveCenters.hpp  SpherepackIterator.cpp  SpherepackIterator.hpp  Strahlkorper.cpp  Strahlkorper.hpp  StrahlkorperCoordsInDifferentFrame.cpp  StrahlkorperCoordsInDifferentFrame.hpp  StrahlkorperDataBox.cpp  StrahlkorperDataBox.hpp  StrahlkorperFunctions.cpp  StrahlkorperFunctions.hpp  StrahlkorperGr.cpp  StrahlkorperGr.hpp  StrahlkorperInDifferentFrame.cpp  StrahlkorperInDifferentFrame.hpp  Tags.cpp  Tags.hpp  TagsDeclarations.hpp  TagsTypeAliases.hpp  Target.cpp  TimeDerivStrahlkorper.cpp  (+5 more)
src/ControlSystem/: Averager.cpp  Averager.hpp  CMakeLists.txt  CalculateMeasurementTimescales.cpp  CalculateMeasurementTimescales.hpp  CombinedName.hpp  Component.hpp  Controller.cpp  Controller.hpp  DataVectorHelpers.cpp  DataVectorHelpers.hpp  Event.hpp  ExpirationTimes.cpp  ExpirationTimes.hpp  FunctionOfTime.hpp  FunctionOfTimeUpdater.cpp  FunctionOfTimeUpdater.hpp  FunctionVsTime.hpp  FutureMeasurements.cpp  FutureMeasurements.hpp  InitialExpirationTimes.hpp  IsSize.hpp  Metafunctions.hpp  NamespaceDocs.hpp  PiecewisePolynomial.cpp  PiecewisePolynomial.hpp  RunCallbacks.hpp  SettleToConstant.cpp  SettleToConstant.hpp  Tags.cpp  Tags.hpp  TimescaleTuner.cpp  TimescaleTuner.hpp  Trigger.hpp  UpdateControlSystem.hpp  UpdateFunctionOfTime.cpp  UpdateFunctionOfTime.hpp  WriteData.hpp
src/DataStructures/: ApplyMatrices.cpp  ApplyMatrices.hpp  BoostMultiArray.hpp  CMakeLists.txt  CachedTempBuffer.hpp  CircularDeque.hpp  CoefficientVector.cpp  CoefficientVector.hpp  ComplexDataVector.hpp  ComplexDiagonalModalOperator.hpp  ComplexModalVector.hpp  CompressedMatrix.cpp  CompressedMatrix.hpp  CompressedVector.cpp  CompressedVector.hpp  DataBox.hpp  DataBoxHelpers.hpp  DataBoxTag.hpp  DataVector.cpp  DataVector.hpp  DenseMatrix.hpp  DenseVector.hpp  DiagonalModalOperator.hpp  DynamicBuffer.cpp  DynamicBuffer.hpp  DynamicMatrix.cpp  DynamicMatrix.hpp  DynamicVector.cpp  DynamicVector.hpp  ExtractPoint.hpp  FixedHashMap.hpp  FloatingPointType.cpp  FloatingPointType.hpp  GeneralIndexIterator.hpp  IdPair.hpp  Index.cpp  Index.hpp  IndexIterator.cpp  IndexIterator.hpp  LeviCivitaIterator.cpp  (+34 more)
src/Domain/: AreaElement.cpp  AreaElement.hpp  Block.cpp  Block.hpp  BlockId.hpp  BlockLogicalCoordinates.cpp  BlockLogicalCoordinates.hpp  BlockNeighbor.cpp  BlockNeighbor.hpp  BlockVector.hpp  CMakeLists.txt  CreateInitialElement.cpp  CreateInitialElement.hpp  CreateInitialMesh.cpp  CreateInitialMesh.hpp  DiagnosticInfo.hpp  Direction.cpp  Direction.hpp  DirectionMap.hpp  Domain.cpp  Domain.hpp  DomainHelpers.cpp  DomainHelpers.hpp  Element.cpp  Element.hpp  ElementDistribution.cpp  ElementDistribution.hpp  ElementId.cpp  ElementId.hpp  ElementIndex.cpp  ElementIndex.hpp  ElementLogicalCoordinates.cpp  ElementLogicalCoordinates.hpp  ElementMap.cpp  ElementMap.hpp  ElementToBlockLogicalMap.cpp  ElementToBlockLogicalMap.hpp  ExcisionSphere.cpp  ExcisionSphere.hpp  FaceNormal.cpp  (+51 more)
src/Elliptic/: CMakeLists.txt  FirstOrderComputeTags.hpp  FirstOrderOperator.hpp  IterationId.hpp  NumericInitialGuess.hpp  Tags.hpp
src/ErrorHandling/: AbortWithErrorMessage.cpp  AbortWithErrorMessage.hpp  Assert.hpp  Breakpoint.cpp  CMakeLists.txt  Error.hpp  Exceptions.hpp  ExpectsAndEnsures.hpp  FloatingPointExceptions.cpp  FloatingPointExceptions.hpp  StaticAssert.hpp
src/Evolution/: BoundaryCorrectionTags.hpp  CMakeLists.txt  ComputeTags.hpp  Evolution.hpp  NumericInitialData.hpp  NumericalInitialData.hpp  PassVariables.hpp  Protocols.hpp  Tags.hpp  TagsDomain.cpp  TagsDomain.hpp  TypeTraits.hpp
src/Executables/: CMakeLists.txt
src/IO/: CMakeLists.txt  ComposeTable.cpp  ComposeTable.hpp  Connectivity.cpp  Connectivity.hpp  VolumeDataFile.cpp  VolumeDataFile.hpp
src/Informer/: CMakeLists.txt  InfoAtCompile.cpp  InfoAtLink.cpp  InfoAtLinkExtractFlags.py  InfoFromBuild.cpp  InfoFromBuild.hpp  Informer.cpp  Informer.hpp  Tags.hpp  Verbosity.cpp  Verbosity.hpp
src/Numerical/: CMakeLists.txt
src/NumericalAlgorithms/: CMakeLists.txt
src/Options/: Auto.cpp  Auto.hpp  CMakeLists.txt  Comparator.cpp  Comparator.hpp  Context.cpp  Context.hpp  Factory.hpp  FactoryHelpers.hpp  MakeCreatableFromYaml.hpp  Options.hpp  OptionsDetails.hpp  ParseError.hpp  ParseOptions.cpp  ParseOptions.hpp  (+3 more)
(+10018 files in other folders)
