# Distributed under the MIT License.
# See LICENSE.txt for details.

[metadata]
name = spectre
version = @SPECTRE_VERSION@
description = Python bindings for SpECTRE
author = SXS collaboration
url = @SPECTRE_HOMEPAGE@
license = MIT

[options]
packages = find:
install_requires = @SPECTRE_PY_DEPS_OUTPUT@
python_requires = >=3.7

[options.extras_require]
dev = @SPECTRE_PY_DEV_DEPS_OUTPUT@

[options.package_data]
# Install Python bindings libs alongside the Python code
* = *.so

[options.entry_points]
console_scripts =
    spectre = spectre.__main__:cli

[flake8]
max-line-length = 80
extend-ignore = "E203"
