# Distributed under the MIT License.
# See LICENSE.txt for details.

add_subdirectory(ApparentHorizons)
add_subdirectory(ControlSystem)
add_subdirectory(DataStructures)
add_subdirectory(Domain)
add_subdirectory(Elliptic)
add_subdirectory(ErrorHandling)
add_subdirectory(Evolution)
add_subdirectory(Executables)
add_subdirectory(Informer)
add_subdirectory(IO)
add_subdirectory(NumericalAlgorithms)
add_subdirectory(Parallel)
add_subdirectory(PointwiseFunctions)
add_subdirectory(PythonBindings)
add_subdirectory(Time)
add_subdirectory(Utilities)
