# Distributed under the MIT License.
# See LICENSE.txt for details.

add_subdirectory(Benchmark)
add_subdirectory(CombineH5)
add_subdirectory(ConvertComposeTable)
add_subdirectory(DebugPreprocessor)
add_subdirectory(ExportEquationOfStateForRotNS)
add_subdirectory(Examples)
add_subdirectory(ExportCoordinates)
add_subdirectory(ExtendConnectivity)
add_subdirectory(FindHorizons)
add_subdirectory(ParallelInfo)
add_subdirectory(ReduceCceWorldtube)
